--- a/style.css
+++ b/style.css
@@ -1,17 +1,9 @@
 .signature-container {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 80%; /* responsive scaling */
-    max-width: 1000px;
-    height: auto;
-    z-index: -1;
-    pointer-events: none;
-    opacity: 0;
-    transition: opacity 0.5s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
-
 
 .signature-container.show {
     opacity: 1;
@@ -32,10 +24,19 @@
 }
 
 #sigPath {
+    stroke: #f5c842;
     fill: none;
-    stroke: #1f1420;
     stroke-width: 2;
-  }
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    transition: fill 1s ease-in-out;
+}
+
+/* After drawing is complete, we fill */
+#sigPath.filled {
+    fill: #f5c842;
+    stroke: #f5c842;
+}
 
 @keyframes drawStroke {
     to {
